[gd_scene load_steps=4 format=3 uid="uid://bnohqavc2drhe"]

[ext_resource type="Script" path="res://scripts/WelcomeScreen.gd" id="1_welscreen"]
[ext_resource type="FontFile" uid="uid://c0u8hnj5jnlf5" path="res://assets/SyneMono-Regular.ttf" id="2_welscreen"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font = ExtResource("2_welscreen")
font_size = 32

[node name="WelcomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_welscreen")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 80.0
offset_right = -60.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2

[node name="WelcomeLabel" type="RichTextLabel" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 200)
bbcode_enabled = true
text = "[center]Welcome to Echo of the Dead![/center]"
fit_content = true

[node name="SkipContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0

[node name="SkipButton" type="Button" parent="SkipContainer"]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 100.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("2_welscreen")
theme_override_font_sizes/font_size = 16
text = "Skip â†’"
flat = true

[node name="ArrowTexture" type="TextureRect" parent="SkipContainer/SkipButton"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
